@startuml

title __DECO's Class Diagram__\n

  namespace om.example.deco {
      class com.example.deco.HelloApplication {
          {static} + main()
          + start()
      }
    }

  

  namespace om.example.deco {
      class com.example.deco.HelloController {
          + canv : Canvas
          # addGir()
          # addPresent()
          # addStar()
          # appearTree()
      }
    }

  

  com.example.deco.HelloApplication -up-|> javafx.application.Application
  com.example.deco.HelloController o-- com.example.deco.model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
